Web site now runs without server

--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <title>Yale InVē</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/css/reset.css" rel="stylesheet">
-    <link href="/css/timeline.css" media="screen" rel="stylesheet">
-    <link href="/css/splash.css" media="screen" rel="stylesheet">
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/timeline.css" media="screen" rel="stylesheet">
+    <link href="css/splash.css" media="screen" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <script src="/js/jquery-2.1.3.min.js"></script>
-    <script src="/js/modernizr.js"></script> <!-- Modernizr -->
-    <script src="/js/home.js"></script>
+    <script src="js/jquery-2.1.3.min.js"></script>
+    <script src="js/modernizr.js"></script> <!-- Modernizr -->
+    <script src="js/home.js"></script>
 
     </head>
   </head>
   <body>
     <section id="head">
       <div class="photo-container">
-        <img src="/img/inve-white.png" class="photo" />
+        <img src="img/inve-white.png" class="photo" />
       </div>
     </section>
     <section id="about">
@@ -41,7 +41,7 @@
       <div id="cd-timeline" class="cd-container">
         <div class="cd-timeline-block">
           <div class="cd-timeline-img cd-picture">
-            <img src="img/cd-icon-picture.svg" alt="Picture">
+            <img src="img/cd-icon-clipboard.svg" alt="Event">
           </div> <!-- cd-timeline-img -->
 
           <div class="cd-timeline-content">
@@ -53,7 +53,7 @@
 
         <div class="cd-timeline-block">
           <div class="cd-timeline-img cd-picture">
-            <img src="img/cd-icon-movie.svg" alt="Movie">
+            <img src="img/cd-icon-clipboard.svg" alt="Event">
           </div> <!-- cd-timeline-img -->
 
           <div class="cd-timeline-content">
@@ -65,7 +65,7 @@
 
         <div class="cd-timeline-block">
           <div class="cd-timeline-img cd-picture">
-            <img src="img/cd-icon-picture.svg" alt="Picture">
+            <img src="img/cd-icon-clipboard.svg" alt="Event">
           </div> <!-- cd-timeline-img -->
 
           <div class="cd-timeline-content">
@@ -89,7 +89,7 @@
 
         <div class="cd-timeline-block">
           <div class="cd-timeline-img cd-picture">
-            <img src="img/cd-icon-location.svg" alt="Location">
+            <img src="img/cd-icon-clipboard.svg" alt="Event">
           </div> <!-- cd-timeline-img -->
 
           <div class="cd-timeline-content">
@@ -101,7 +101,7 @@
 
         <div class="cd-timeline-block">
           <div class="cd-timeline-img cd-picture">
-            <img src="img/cd-icon-movie.svg" alt="Movie">
+            <img src="img/cd-icon-clipboard.svg" alt="Event">
           </div> <!-- cd-timeline-img -->
 
           <div class="cd-timeline-content">
@@ -112,8 +112,8 @@
         </div> <!-- cd-timeline-block -->
 
         <div class="cd-timeline-block">
-          <div class="cd-timeline-img cd-picture">
-            <img src="img/cd-icon-movie.svg" alt="Movie">
+          <div class="cd-timeline-img cd-location">
+            <img src="img/cd-icon-location.svg" alt="Location">
           </div> <!-- cd-timeline-img -->
 
           <div class="cd-timeline-content">
@@ -125,39 +125,6 @@
 
       </div> <!-- cd-timeline -->
     </section>
-    <!-- <section id="faq">
-      <div id="faq-title">
-        <h1>FAQ</h1>
-      </div>
-      <div id="faq-content">
-        <div class="wrapper">
-            <div class="left1">
-                <h2>Stuff</h2>
-                <span>More stuff</span>
-                <h2>Stuff</h2>
-                <span>More stuff</span>
-                <h2>Stuff</h2>
-                <span>More stuff</span>
-            </div>
-            <div class="left2">
-                <h2>Stuff</h2>
-                <span>More stuff</span>
-                <h2>Stuff</h2>
-                <span>More stuff</span>
-                <h2>Stuff</h2>
-                <span>More stuff</span>
-            </div>
-            <div class="right">
-                <h2>Stuff</h2>
-                <span>More stuff</span>
-                <h2>Stuff</h2>
-                <span>More stuff</span>
-                <h2>Stuff</h2>
-                <span>More stuff</span>
-            </div> 
-        </div>
-      </div>
-    </section> -->
     <section id="footer">
       <div class="social">
         <a href="https://www.facebook.com/yaleinve" class="icon-facebook first-social"></a>
