Finished alpha version of website

--- a/index.html
+++ b/index.html
@@ -21,17 +21,24 @@
       <div class="photo-container">
         <img src="img/inve-white.png" class="photo" />
       </div>
+      <div class="arrow animated bounce" id="arrow-down"></div>
     </section>
+
     <section id="about">
       <div id="about-title">
         <h1>Who We Are</h1>
       </div>
       <div id="about-content">
-        <h2>Yale Undergraduate Intelligent Vehicles (InVē) serves to stimulate and inspire top-notch engineering students at Yale with exciting autonomous robotics challenges. Each year, we dive into a collegiate competition that requires us to build a self-driving vehicle. In the process, students gain multidisciplinary technical skills, exposure to leading edge problems in engineering, and the opportunity to work with other like-minded peers in the development of new technologies.</h2>
-
-        <h2>Last year, InVē successfully entered a Segway-powered robot into the Intelligent Ground Vehicle Competition. The inaugural team consisted of five members, each of whom had a hand in the mechanical, electrical, and software design of the system. Starting with funds from the Yale School of Engineering and Applied Sciences, we spent the Fall researching control algorithms for navigation, and the Spring designing and fabricating the vehicle chassis. Software and hardware came together in the months of April and May, and by the competition in June we competed well enough to win Rookie of the Year and 4th place in the Design Challenge.</h2>
-
-        <h2>This year, we have grown to ten members and have set upon building a robotic sailboat for entry into the International Robotic Sailing Regatta. In recruiting, we have selected students with diverse skillsets and a passion for creative problem solving. Our team is now stronger than ever, and we are eager to break ground in developing a robotic racing sailboat.</h2>
+        <h2>Yale Undergraduate Intelligent Vehicles (InVē) is a robotics group at Yale formed in the fall of 2013. Each year, we integrate design, technology, and engineering into an autonomous vehicle that we enter into national or international robotics competitions.  These collegiate competitions help us to develop technical and design skills while engaging with engineering outside of the framework of our formal education.  In doing so, we tackle many real-world engineering problems and challenges as we create self-driving vehicles.</h2>
+      </div>
+    </section>
+    <section id="sailbot">
+      <div id="sailbot-title">
+        <h1>This Year's Competition</h1>
+      </div>
+      <div id="sailbot-content">
+        <h2>Yale InVē will be competing at the 2016 <a href="http://sailbot.org" target="_blank">International Robotic Sailing Regatta competition</a>, informally known as Sailbot. SailBot aims at allowing student teams from across the globe to construct and compete in friendly, autonomous sailboat racing. The competition started in 2004, when students from the University of British Columbia demonstrated as part of a fourth-year design project that an autonomous sailboat was possible. As a result, formal rules were constructed for friendly autonomous sailboat racing, with the first SailBot competition held in 2006 at Queen’s University in Ontario.</h2>
+        <h2>The Yale team will be constructing a vessel for the 2-meter sailing class, and will participate in five events: a fleet race, a station keeping challenge, a naviagation challenge, a long distance race, and an autonomous computer vision challenge.</h2>
       </div>
     </section>
     <section id="timeline">
@@ -125,13 +132,109 @@
 
       </div> <!-- cd-timeline -->
     </section>
+    <section id="team">
+      <div id="team-title">
+        <h1>The Team</h1>
+      </div>
+      <div id="team-members">
+        <div id="team-leadership">
+          <article>
+            <img src="img/carrillo.png" alt="" />
+                <p class="person-name">Alex Carrillo</p>
+                <p class="person-title">President</p>
+          </article>
+          <article>
+            <img src="img/brooks.png" alt="" />
+                <p class="person-name">Jason Brooks</p>
+                <p class="person-title">Treasurer</p>
+          </article>
+          <div class="clearer"></div>
+        </div>
+        <br>
+        <div id="team-leads">
+          <article>
+            <img src="img/mccann.png" alt="" />
+                <p class="person-name">Connor McCann</p>
+                <p class="person-title">Design Lead</p>
+          </article>
+          <article>
+            <img src="img/cerbu.png" alt="" />
+                <p class="person-name">Alois Cerbu</p>
+                <p class="person-title">Fabrication Lead</p>
+          </article>
+          <article>
+            <img src="img/liao.png" alt="" />
+                <p class="person-name">Thomas Liao</p>
+                <p class="person-title">Business Lead/Electronics</p>
+          </article>
+          <div class="clearer"></div>
+        </div>
+        <br>
+        <div id="team-rest">
+          <article>
+            <img src="img/anderson.png" alt="" />
+            <p class="person-name">Eric Anderson</p>
+            <p class="person-title">Design/Fabrication</p>
+          </article>
+          <article>
+            <img src="img/kelleher.png" alt="" />
+            <p class="person-name">Jack Kelleher</p>
+            <p class="person-title">Design/Fabrication</p>
+          </article>
+          <article>
+            <img src="img/robinson.png" alt="" />
+            <p class="person-name">Matthew Robinson</p>
+            <p class="person-title">Electronics</p>
+          </article>
+          <article>
+            <img src="img/malta.png" alt="" />
+              <p class="person-name">Andrew Malta</p>
+              <p class="person-title">Software</p>
+          </article>
+          <article>
+            <img src="img/shreyas.png" alt="" />
+            <p class="person-name">Shreyas Tirumala</p>
+            <p class="person-title">Software</p>
+          </article>
+          <article>
+            <img src="img/person.png" alt="" />
+            <p class="person-name">Jessica Alzamora</p>
+            <p class="person-title">Fabrication</p>
+          </article>
+          <article>
+            <img src="img/chang.png" alt="" />
+            <p class="person-name">Wooje Chang</p>
+            <p class="person-title">Fabrication</p>
+          </article>
+          <article>
+            <img src="img/person.png" alt="" />
+            <p class="person-name">Soham Sankaran</p>
+            <p class="person-title">Software</p>
+          </article>
+          <div class="clearer"></div>
+        </div>
+        <br>
+        <div id="team-advisors">
+          <article>
+            <img src="img/wilen.png" alt="" />
+            <p class="person-name">Larry Wilen, Ph.D</p>
+            <p class="person-title">Team Advisor</p>
+          </article>
+          <article>
+            <img src="img/revkin.png" alt="" />
+            <p class="person-name">Joshua Revkin</p>
+            <p class="person-title">Design Advisor</p>
+          </article>
+        </div>
+        <div class="clearer"></div>
+      </div>
+    </section>
     <section id="footer">
       <div class="social">
         <a href="https://www.facebook.com/yaleinve" class="icon-facebook first-social"></a>
         <a href="mailto:jason.brooks@yale.edu" class="icon-mail"></a>
         <a href="https://twitter.com/yaleinve" class="icon-twitter"></a>
       </div>
-      <h3 class="orange">Made in New Haven, CT. <script>document.write(new Date().getFullYear())</script>.</h3>
     </section>
   </body>
 </html>
