--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
           <article>
             <img src="img/carrillo.png" alt="" />
                 <p class="person-name">Alex Carrillo</p>
-                <p class="person-title">President</p>
+                <p class="person-title">President/Software</p>
           </article>
           <article>
             <img src="img/brooks.png" alt="" />
                 <p class="person-name">Jason Brooks</p>
-                <p class="person-title">Treasurer</p>
+                <p class="person-title">Treasurer/Software</p>
           </article>
           <div class="clearer"></div>
         </div>
@@ -232,7 +232,7 @@
     <section id="footer">
       <div class="social">
         <a href="https://www.facebook.com/yaleinve" class="icon-facebook first-social"></a>
-        <a href="mailto:jason.brooks@yale.edu" class="icon-mail"></a>
+        <a href="mailto:jason.brooks@yale.edu,alejandro.carrillo@yale.edu" class="icon-mail"></a>
         <a href="https://twitter.com/yaleinve" class="icon-twitter"></a>
       </div>
     </section>
