Fixed padding on titles

--- a/index.html
+++ b/index.html
@@ -141,12 +141,14 @@
           <article>
             <img src="img/carrillo.png" alt="" />
                 <p class="person-name">Alex Carrillo</p>
-                <p class="person-title">President/Software</p>
+                <p class="person-title">President</p>
+                <p class="person-title">Software</p>
           </article>
           <article>
             <img src="img/brooks.png" alt="" />
                 <p class="person-name">Jason Brooks</p>
-                <p class="person-title">Treasurer/Software</p>
+                <p class="person-title">Treasurer</p>
+                <p class="person-title">Software</p>
           </article>
           <div class="clearer"></div>
         </div>
