--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1>This Year's Competition</h1>
       </div>
       <div id="sailbot-content">
-        <h2>Yale InVē will be competing at the 2016 <a href="http://sailbot.org" target="_blank">International Robotic Sailing Regatta competition</a>, informally known as Sailbot. SailBot aims at allowing student teams from across the globe to construct and compete in friendly, autonomous sailboat racing. The competition started in 2004, when students from the University of British Columbia demonstrated as part of a fourth-year design project that an autonomous sailboat was possible. As a result, formal rules were constructed for friendly autonomous sailboat racing, with the first SailBot competition held in 2006 at Queen’s University in Ontario.</h2>
+        <h2>Yale InVē will be competing at the 2016 <a href="http://sailbot.org" target="_blank">International Robotic Sailing Regatta</a>, informally known as Sailbot. SailBot aims at allowing student teams from across the globe to construct and compete in friendly, autonomous sailboat racing. The competition started in 2004, when students from the University of British Columbia demonstrated as part of a fourth-year design project that an autonomous sailboat was possible. As a result, formal rules were constructed for friendly autonomous sailboat racing, with the first SailBot competition held in 2006 at Queen’s University in Ontario.</h2>
         <h2>The Yale team will be constructing a vessel for the 2-meter sailing class, and will participate in five events: a fleet race, a station keeping challenge, a naviagation challenge, a long distance race, and an autonomous computer vision challenge.</h2>
       </div>
     </section>
