--- a/index.html
+++ b/index.html
@@ -209,6 +209,11 @@
             <p class="person-title">Fabrication</p>
           </article>
           <article>
+            <img src="img/li.png" alt="" />
+            <p class="person-name">Betsy Li</p>
+            <p class="person-title">Fabrication</p>
+          </article>
+          <article>
             <img src="img/person.png" alt="" />
             <p class="person-name">Soham Sankaran</p>
             <p class="person-title">Software</p>
