changed mail to and clio img and tiltrotor img

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       <section id="footer">
         <div class="social">
           <a href="https://www.facebook.com/yaleinve" class="icon-facebook first-social"></a>
-          <a href="mailto:jason.brooks@yale.edu,alejandro.carrillo@yale.edu" class="icon-mail"></a>
+          <a href="mailto:jonathan.li@yale.edu" class="icon-mail"></a>
           <a href="https://twitter.com/yaleinve" class="icon-twitter"></a>
         </div>
       </section>
